fix: change behavior with Double-click and Shift+click mouse button

--- a/css/style.scss
+++ b/css/style.scss
@@ -74,9 +74,7 @@ $sizePage: 100%;
     border-radius: 5px;
   }
   .keyboard-row {
-    // position: absolute;
     display: grid;
-    // grid-template-columns: repeat(13, 40px) 100px;
     grid-template-rows: 40px;
     column-gap: 10px;
     justify-content: center;
@@ -125,7 +123,7 @@ $sizePage: 100%;
   }
   .key:hover {
     background-color: #c3b8f0;
-    border-radius: 10px;
+    // border-radius: 10px;
     border-color: #5e3aec;
     box-shadow: 0 2px 5px rgba(81, 42, 236, 0.5), 0 1px 1px rgba(81, 42, 236, 0.45);
     font-weight: 600;
@@ -137,8 +135,6 @@ $sizePage: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(0, 0, 0, 0.22);
   }
   [data-class="press"] {
-    // width: 98%;
-    // height: 98%;
     background-color: #c3b8f0;
     border-radius: 20px;
     border: #5e3aec solid 1px;
@@ -163,8 +159,6 @@ $sizePage: 100%;
     }
     100% {
       opacity: 1;
-      // width: 98%;
-      // height: 98%;
       background-color: #c3b8f0;
       border-radius: 20px;
       border: #5e3aec solid 1px;
